Fixed overlapping

--- a/src/client/src/Card_Grid/Card_Grid.css
+++ b/src/client/src/Card_Grid/Card_Grid.css
@@ -1,12 +1,12 @@
 .grid_main {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     gap: 1em;
     margin-top: calc(8vh + 10px);
     margin-bottom: 8vh;
     /* NOTE: This assumes the max width of a card is 400px */
     /*max-height: calc(4 * 400px + 3 * 1em);*/
-    max-width: 400px / 100vw;
     padding: 10px;
     height: auto;
 }
